--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,11 @@
 {
   "bracketSpacing": true,
-  "jsxBracketSameLine": true,
   "printWidth": 80,
   "singleQuote": true,
   "trailingComma": "none",
   "tabWidth": 2,
+  "arrowParens": "always",
+  "semi": false,
   "useTabs": false,
-  "react/jsx-max-props-per-line": [1, { "when": "always" }]
+  "singleAttributePerLine": true
 }
