--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
+    "react-toastify": "^5.4.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "underscore": "^1.9.1",
