--- a/.eslintrc
+++ b/.eslintrc
@@ -44,10 +44,11 @@
     "es6": true,
     "browser": true
   },
-  "extends": "eslint:recommended",
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
   "ecmaFeatures": {
     "jsx": true,
     "experimentalObjectRestSpread": true
   },
-  "plugins": ["react"]
+  "plugins": ["react"],
+  "globals": { "require": true }
 }
